--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,7 +98,7 @@
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
+  --background: rgb(36, 37, 39);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
@@ -147,7 +147,7 @@
     @apply bg-background text-foreground;
   }
   .btn-auth {
-    @apply border-foreground border-2 !rounded-[8px] px-6 py-1.5 text-sm !font-bold cursor-pointer text-center;
+    @apply border-2 !rounded-[8px] px-6 py-1.5 text-sm !font-bold cursor-pointer text-center;
   }
 
   .gradiantBg {
