--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,7 +104,7 @@
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: #fb6868;
+  --primary: #afafaf;
   --primary-foreground: oklch(0.205 0 0);
   --secondary: #46bea6;
   --secondary-foreground: oklch(0.985 0 0);
